2008-11-14  Jan Schmidt  <jan.schmidt@sun.com>

	* gst/audioresample/gstaudioresample.c:
	Guard against a NULL dereference I somehow encountered -
	with a FLUSH_STOP arriving either before basetransform _start(),
	or after _stop().

	* gst/typefind/gsttypefindfunctions.c:
	Make sure we never jump backwards when typefinding corrupt mov files.

2008-11-14  Jan Schmidt  <jan.schmidt@sun.com>

	* gst-libs/gst/interfaces/propertyprobe.c:
	Fix random type causing a docs warning.

2008-11-14  Stefan Kost  <ensonic@users.sf.net>

	* sys/v4l/gstv4l.c:
	  Give it a minimal rank for autovideosrc.

2008-11-13  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* gst/typefind/gsttypefindfunctions.c: (jp2_type_find),
	(plugin_init):
	Improve typefinding of ISO JPEG2000 mime types.

2008-11-13  Wim Taymans  <wim.taymans@collabora.co.uk>

	* sys/xvimage/xvimagesink.c: (gst_xvimage_buffer_finalize),
	(gst_xvimagesink_xvimage_put), (gst_xvimagesink_setcaps),
	(gst_xvimagesink_show_frame), (gst_xvimagesink_buffer_alloc):
	* sys/xvimage/xvimagesink.h:
	Avoid typechecking when we do trivial casts.
	Move error handling out of the main program flow.
	Sneak in the display-region caps property, not completely correct yet.
	Cache the width/height in buffer_alloc instead of parsing it from the
	caps all the time.

2008-11-13  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/playback/gstplaybin2.c: (deactivate_group):
	don't try to unlink the selector sinkpad when we don't have it yet. This
	can happen if an error occured before the group was complete.

2008-11-13  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/rtp/gstrtpbuffer.c: (gst_rtp_buffer_validate_data),
	(gst_rtp_buffer_set_packet_len), (gst_rtp_buffer_get_packet_len),
	(gst_rtp_buffer_get_header_len), (gst_rtp_buffer_get_version),
	(gst_rtp_buffer_set_version), (gst_rtp_buffer_get_padding),
	(gst_rtp_buffer_set_padding), (gst_rtp_buffer_pad_to),
	(gst_rtp_buffer_get_extension), (gst_rtp_buffer_set_extension),